--- a/train.ipynb
+++ b/train.ipynb
@@ -2,111 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "bea923a3",
+   "execution_count": 1,
+   "id": "99b7a8bb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch.utils.data import DataLoader\n",
     "from datasets import load_dataset\n",
-    "\n",
-    "ds = load_dataset(\"roneneldan/TinyStories\").with_format(\"torch\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "796e451b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import DataLoader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c11a15c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataloader = DataLoader(ds.get(\"train\"), batch_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "f7ce0e5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dli = iter(dataloader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "466153b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch = next(dli)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "5c78b65d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'One day, a little girl named Lily found a needle in her room. She knew it was difficult to play with it because it was sharp. Lily wanted to share the needle with her mom, so she could sew a button on her shirt.\\n\\nLily went to her mom and said, \"Mom, I found this needle. Can you share it with me and sew my shirt?\" Her mom smiled and said, \"Yes, Lily, we can share the needle and fix your shirt.\"\\n\\nTogether, they shared the needle and sewed the button on Lily\\'s shirt. It was not difficult for them because they were sharing and helping each other. After they finished, Lily thanked her mom for sharing the needle and fixing her shirt. They both felt happy because they had shared and worked together.'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch[\"text\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "e80c2c19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from torch import nn\n",
     "import tiktoken"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "4f679d98",
+   "execution_count": 2,
+   "id": "bea923a3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds = load_dataset(\"roneneldan/TinyStories\").with_format(\"torch\")\n",
+    "dataloader = DataLoader(ds.get(\"train\"), batch_size=1)\n",
     "enc = tiktoken.get_encoding(encoding_name=\"o200k_base\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "689c18ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = batch[\"text\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "001dce2c",
+   "execution_count": 3,
+   "id": "f7ce0e5f",
    "metadata": {},
    "outputs": [
     {
@@ -272,23 +194,16 @@
        " 13]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "dli = iter(dataloader)\n",
+    "batch = next(dli)\n",
+    "text = batch[\"text\"][0]\n",
     "enc.encode(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "ea402f82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch import nn"
    ]
   },
   {
