--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "99b7a8bb",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "from torch.utils.data import DataLoader\n",
     "from datasets import load_dataset\n",
     "from torch import nn\n",
+    "import torch.nn.functional as F\n",
     "import tiktoken"
    ]
   },
@@ -209,46 +210,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd6655f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = enc.n_vocab\n",
+    "d_model = 768\n",
+    "context_len = 1_000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7af0b737",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GPT(nn.module):\n",
+    "class GPT(nn.Module):\n",
     "  def __init__(self):\n",
     "    super().__init__()\n",
-    "    # token embeddings (context by dimensions)\n",
+    "    # token embeddings (vocab size by dimensions)\n",
+    "    self.token_embed = nn.Embedding(vocab_size, d_model)\n",
     "    # position embeddings (context by dimensions)\n",
+    "    self.pos_embed = nn.Embedding(context_len, d_model)\n",
     "    # transformer blocks\n",
     "    # layer norm\n",
-    "    # linear\n"
+    "    # linear\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfe0ad89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Transformer(nn.module):\n",
-    "  def __init__(self):\n",
-    "    super().__init__()\n",
-    "    # layer norm\n",
-    "    # multi-head masked attention\n",
-    "    # dropout\n",
-    "    # layer norm\n",
-    "    # mlp (linear + gelu)\n",
-    "    # dropout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "22726d76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Attention(nn.module):\n",
+    "class Attention(nn.Module):\n",
     "  def __init__(self):\n",
     "    super().__init__()\n",
     "    # multiple heads\n",
@@ -263,6 +263,47 @@
     "    # v layer\n",
     "    # matmul with attention wiehgts\n",
     "    # linear layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f45289be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.layers = nn.Sequential(\n",
+    "      nn.Linear(),\n",
+    "      nn.GELU(),\n",
+    "      nn.Linear(),\n",
+    "    )\n",
+    "  def forward(self, x):\n",
+    "    return self.layers(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe0ad89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.attention = nn.Sequential(\n",
+    "      nn.LayerNorm(d_model),\n",
+    "      Attention,\n",
+    "      nn.Dropout\n",
+    "    )\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    x = x + self.stack(x)\n",
+    "    x = F.layer_norm(x)\n",
+    "    pass"
    ]
   }
  ],
