--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "99b7a8bb",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "from datasets import load_dataset\n",
     "from torch import nn\n",
     "import torch.nn.functional as F\n",
-    "import tiktoken"
+    "import tiktoken\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bea923a3",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "f7ce0e5f",
    "metadata": {},
    "outputs": [
@@ -195,7 +196,7 @@
        " 13]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fd6655f1",
    "metadata": {},
    "outputs": [],
@@ -221,53 +222,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7af0b737",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class GPT(nn.Module):\n",
-    "  def __init__(self):\n",
-    "    super().__init__()\n",
-    "    # token embeddings (vocab size by dimensions)\n",
-    "    self.token_embed = nn.Embedding(vocab_size, d_model)\n",
-    "    # position embeddings (context by dimensions)\n",
-    "    self.pos_embed = nn.Embedding(context_len, d_model)\n",
-    "    # transformer blocks\n",
-    "    # layer norm\n",
-    "    # linear\n",
-    "\n",
-    "  def forward(self, x):\n",
-    "    pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "22726d76",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Attention(nn.Module):\n",
-    "  def __init__(self):\n",
+    "  def __init__(self, dimensons):\n",
     "    super().__init__()\n",
-    "    # multiple heads\n",
+    "    self.q = nn.Linear(context_len, dimensons)\n",
+    "    self.k = nn.Linear(context_len, dimensons)\n",
+    "    self.v = nn.Linear(context_len, dimensons)\n",
     "\n",
-    "    # attention weights:\n",
-    "      # qk layers\n",
-    "      # matmul qk\n",
-    "      # casual mask\n",
-    "      # softmax\n",
-    "      # dropout\n",
+    "  def forward(self, x):\n",
+    "    q = x @ self.q\n",
+    "    k = x @ self.k\n",
+    "    a = q @ k\n",
     "\n",
-    "    # v layer\n",
-    "    # matmul with attention wiehgts\n",
-    "    # linear layer"
+    "    a = torch.tril(a)\n",
+    "    a = F.softmax(a)\n",
+    "    a = F.dropout(a)\n",
+    "\n",
+    "    v = self.v @ a\n",
+    "    return v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f45289be",
    "metadata": {},
    "outputs": [],
@@ -280,13 +262,14 @@
     "      nn.GELU(),\n",
     "      nn.Linear(),\n",
     "    )\n",
+    "\n",
     "  def forward(self, x):\n",
     "    return self.layers(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cfe0ad89",
    "metadata": {},
    "outputs": [],
@@ -294,16 +277,48 @@
     "class Transformer(nn.Module):\n",
     "  def __init__(self):\n",
     "    super().__init__()\n",
-    "    self.attention = nn.Sequential(\n",
+    "    self.model_1 = nn.Sequential(\n",
     "      nn.LayerNorm(d_model),\n",
-    "      Attention,\n",
-    "      nn.Dropout\n",
+    "      Attention(),\n",
+    "      nn.Dropout(),\n",
+    "    )\n",
+    "    self.mlp = nn.Sequential(\n",
+    "      nn.Linear(),\n",
+    "      nn.GELU(),\n",
+    "      nn.Linear(),\n",
+    "      nn.Dropout(),\n",
     "    )\n",
     "\n",
     "  def forward(self, x):\n",
-    "    x = x + self.stack(x)\n",
+    "    x = x + self.model_1(x)\n",
     "    x = F.layer_norm(x)\n",
-    "    pass"
+    "    x = x + self.mlp(x)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7af0b737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPT(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.token_embed = nn.Embedding(vocab_size, d_model)\n",
+    "    self.pos_embed = nn.Embedding(context_len, d_model)\n",
+    "    self.model = nn.Sequential(\n",
+    "      Transformer(),\n",
+    "      nn.LayerNorm(),\n",
+    "      nn.Embedding(d_model, vocab_size)\n",
+    "    )\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    x = self.token_embed(x)\n",
+    "    x = x + self.pos_embed(torch.arange(0, context_len))\n",
+    "    x = self.model(x)\n",
+    "    return x"
    ]
   }
  ],
