--- a/attention.ipynb
+++ b/attention.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "6810bae8",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "tensor([-0.0397, -0.7474, -2.6117], grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "cfd02643",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "torch.Size([6, 3])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "941d6cdb",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "tensor([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "d79f87cf",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "tensor([-0.0397, -0.7474, -2.6117], grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "id": "1170f969",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "tensor([-2.2338,  7.3810,  0.6456,  0.7270, -2.4230,  2.0040])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,6 +406,41 @@
     "  print(\" + \".join([f\"{x_i[idx]:.2f} * {element:.2f}\" for idx, element in enumerate(query)]), end=f\" = {dp:.2f}\")\n",
     "  print(\"\\n\\n\")\n",
     "attn_scores_2.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edfaceea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ True, False, False, False, False, False],\n",
+      "        [False,  True, False, False, False, False],\n",
+      "        [False, False, False, False, False, False],\n",
+      "        [False, False,  True,  True, False, False],\n",
+      "        [False, False, False, False,  True, False],\n",
+      "        [False, False, False, False, False,  True]])\n",
+      "tensor([[3.0734, -0.0000, 0.0000, 0.0000, -0.0000, -0.0000],\n",
+      "        [-0.0000, 7.3810, 0.0000, 0.0000, -0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, -0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 1.1014, 2.2694, -0.0000, 0.0000],\n",
+      "        [-0.0000, -0.0000, -0.0000, -0.0000, 5.8791, 0.0000],\n",
+      "        [-0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 2.0230]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores = input_embeddings @ input_embeddings.T\n",
+    "mask = attn_scores == attn_scores.max(dim=0, keepdim=True).values\n",
+    "print(mask)\n",
+    "\n",
+    "attn_scores = attn_scores * mask\n",
+    "print(attn_scores)"
    ]
   }
  ],
