--- a/attention.ipynb
+++ b/attention.ipynb
@@ -130,7 +130,7 @@
       "text/plain": [
        "(tensor([[ 1.3966e+00, -9.9491e-01, -1.5822e-03],\n",
        "         [-1.1659e+00,  1.3834e-01, -9.8013e-01],\n",
-       "         [ 1.0122e+00, -6.5152e-01,  8.6051e-02],\n",
+       "         [ 1.0122e+00, -6.5152e-01,  8.6052e-02],\n",
        "         [ 2.5264e-01,  2.1043e+00, -6.4511e-01],\n",
        "         [-3.1843e-01, -1.2264e-01, -3.9307e-02],\n",
        "         [-3.1300e-01,  7.5582e-01, -1.2656e+00]], grad_fn=<EmbeddingBackward0>),\n",
@@ -244,25 +244,18 @@
    "execution_count": 11,
    "id": "3d22328b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.5549,  0.0969,  0.8039],\n",
-       "        [-0.0397, -0.7474, -2.6117],\n",
-       "        [ 0.7552,  0.0611, -0.2762],\n",
-       "        [ 1.2135,  0.7346, -0.5071],\n",
-       "        [-1.5549,  1.8092,  0.4337],\n",
-       "        [ 0.4235,  0.8874, -1.0277]], grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_embeddings"
+    "inputs = torch.tensor(\n",
+    "    [\n",
+    "        [0.43, 0.15, 0.89], # Your\n",
+    "        [0.55, 0.87, 0.66], # journey\n",
+    "        [0.57, 0.85, 0.64], # starts\n",
+    "        [0.22, 0.58, 0.33], # with\n",
+    "        [0.77, 0.25, 0.10], # one\n",
+    "        [0.05, 0.80, 0.55], # step\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -274,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0397, -0.7474, -2.6117], grad_fn=<SelectBackward0>)"
+       "tensor([0.5500, 0.8700, 0.6600])"
       ]
      },
      "execution_count": 12,
@@ -283,7 +276,7 @@
     }
    ],
    "source": [
-    "query = input_embeddings[1] # Second input token will be our query\n",
+    "query = inputs[1] # Second input token will be our query\n",
     "query"
    ]
   },
@@ -305,7 +298,7 @@
     }
    ],
    "source": [
-    "input_embeddings.shape"
+    "inputs.shape"
    ]
   },
   {
@@ -317,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0., 0., 0., 0., 0., 0.])"
+       "tensor([2.3049e-26, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00])"
       ]
      },
      "execution_count": 14,
@@ -326,7 +319,7 @@
     }
    ],
    "source": [
-    "attn_scores_2 = torch.empty(input_embeddings.shape[0])\n",
+    "attn_scores_2 = torch.empty(inputs.shape[0])\n",
     "attn_scores_2"
    ]
   },
@@ -339,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0397, -0.7474, -2.6117], grad_fn=<SelectBackward0>)"
+       "tensor([0.5500, 0.8700, 0.6600])"
       ]
      },
      "execution_count": 15,
@@ -353,59 +346,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "1170f969",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i, x_i in enumerate(inputs):\n",
+    "  attn_scores_2[i] = torch.dot(x_i, query)\n",
+    "attn_scores_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "632c0546",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dot product of tensor([1.5500, 0.1000, 0.8000]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "1.55 * -0.04 + 0.10 * -0.75 + 0.80 * -2.61 = -2.23\n",
-      "\n",
-      "\n",
-      "dot product of tensor([-0.0400, -0.7500, -2.6100]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "-0.04 * -0.04 + -0.75 * -0.75 + -2.61 * -2.61 = 7.38\n",
-      "\n",
-      "\n",
-      "dot product of tensor([ 0.7600,  0.0600, -0.2800]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "0.76 * -0.04 + 0.06 * -0.75 + -0.28 * -2.61 = 0.65\n",
-      "\n",
-      "\n",
-      "dot product of tensor([ 1.2100,  0.7300, -0.5100]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "1.21 * -0.04 + 0.73 * -0.75 + -0.51 * -2.61 = 0.73\n",
-      "\n",
-      "\n",
-      "dot product of tensor([-1.5500,  1.8100,  0.4300]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "-1.55 * -0.04 + 1.81 * -0.75 + 0.43 * -2.61 = -2.42\n",
-      "\n",
-      "\n",
-      "dot product of tensor([ 0.4200,  0.8900, -1.0300]) and tensor([-0.0400, -0.7500, -2.6100]):\n",
-      "0.42 * -0.04 + 0.89 * -0.75 + -1.03 * -2.61 = 2.00\n",
-      "\n",
-      "\n"
+      "Attention weights: tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n",
+      "Sum: tensor(1.)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-2.2338,  7.3810,  0.6456,  0.7270, -2.4230,  2.0040])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i, x_i in enumerate(input_embeddings):\n",
-    "  dp = torch.dot(x_i, query)\n",
-    "  attn_scores_2[i] = dp\n",
-    "  print(f\"dot product of {x_i.round(decimals=2).data} and {query.round(decimals=2).data}:\")\n",
-    "  print(\" + \".join([f\"{x_i[idx]:.2f} * {element:.2f}\" for idx, element in enumerate(query)]), end=f\" = {dp:.2f}\")\n",
-    "  print(\"\\n\\n\")\n",
-    "attn_scores_2.data"
+    "attn_weights_2 = torch.softmax(attn_scores_2, dim=-1)\n",
+    "print(\"Attention weights:\", attn_weights_2)\n",
+    "print(\"Sum:\", attn_weights_2.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d1daa898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0596, 0.0208, 0.1233]) = 0.14 * tensor([0.4300, 0.1500, 0.8900])\n",
+      "tensor([0.1308, 0.2070, 0.1570]) = 0.24 * tensor([0.5500, 0.8700, 0.6600])\n",
+      "tensor([0.1330, 0.1983, 0.1493]) = 0.23 * tensor([0.5700, 0.8500, 0.6400])\n",
+      "tensor([0.0273, 0.0719, 0.0409]) = 0.12 * tensor([0.2200, 0.5800, 0.3300])\n",
+      "tensor([0.0833, 0.0270, 0.0108]) = 0.11 * tensor([0.7700, 0.2500, 0.1000])\n",
+      "tensor([0.0079, 0.1265, 0.0870]) = 0.16 * tensor([0.0500, 0.8000, 0.5500])\n",
+      "tensor([0.4419, 0.6515, 0.5683])\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = inputs[1]\n",
+    "context_vec_2 = torch.zeros(query.shape)\n",
+    "query, query.shape, context_vec_2\n",
+    "for i, x_i in enumerate(inputs):\n",
+    "  context_vec_2 += attn_weights_2[i] * x_i\n",
+    "  print(f\"{attn_weights_2[i] * x_i} = {attn_weights_2[i]:.2f} * {x_i}\")\n",
+    "print(context_vec_2)"
    ]
   },
   {
@@ -419,34 +429,407 @@
      "output_type": "stream",
      "text": [
       "tensor([[ True, False, False, False, False, False],\n",
-      "        [False,  True, False, False, False, False],\n",
-      "        [False, False, False, False, False, False],\n",
-      "        [False, False,  True,  True, False, False],\n",
+      "        [False,  True,  True,  True, False,  True],\n",
       "        [False, False, False, False,  True, False],\n",
-      "        [False, False, False, False, False,  True]])\n",
-      "tensor([[3.0734, -0.0000, 0.0000, 0.0000, -0.0000, -0.0000],\n",
-      "        [-0.0000, 7.3810, 0.0000, 0.0000, -0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, -0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 1.1014, 2.2694, -0.0000, 0.0000],\n",
-      "        [-0.0000, -0.0000, -0.0000, -0.0000, 5.8791, 0.0000],\n",
-      "        [-0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 2.0230]],\n",
-      "       grad_fn=<MulBackward0>)\n"
+      "        [False, False, False, False, False, False],\n",
+      "        [False, False, False, False, False, False],\n",
+      "        [False, False, False, False, False, False]])\n",
+      "tensor([[0.9995, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 1.4950, 1.4754, 0.8434, 0.0000, 1.0865],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.7154, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000]])\n"
      ]
     }
    ],
    "source": [
-    "attn_scores = input_embeddings @ input_embeddings.T\n",
+    "attn_scores = inputs @ inputs.T\n",
     "mask = attn_scores == attn_scores.max(dim=0, keepdim=True).values\n",
     "print(mask)\n",
     "\n",
     "attn_scores = attn_scores * mask\n",
     "print(attn_scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9f772995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attention weights: tensor([0.1455, 0.2278, 0.2249, 0.1285, 0.1077, 0.1656])\n",
+      "Sum: tensor(1.0000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights_2_tmp = attn_scores_2 / attn_scores_2.sum()\n",
+    "print(\"Attention weights:\", attn_weights_2_tmp)\n",
+    "print(\"Sum:\", attn_weights_2_tmp.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "83dab672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],\n",
+      "        [0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865],\n",
+      "        [0.9422, 1.4754, 1.4570, 0.8296, 0.7154, 1.0605],\n",
+      "        [0.4753, 0.8434, 0.8296, 0.4937, 0.3474, 0.6565],\n",
+      "        [0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],\n",
+      "        [0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores = inputs @ inputs.T\n",
+    "print(attn_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5a2311b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2098, 0.2006, 0.1981, 0.1242, 0.1220, 0.1452],\n",
+      "        [0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581],\n",
+      "        [0.1390, 0.2369, 0.2326, 0.1242, 0.1108, 0.1565],\n",
+      "        [0.1435, 0.2074, 0.2046, 0.1462, 0.1263, 0.1720],\n",
+      "        [0.1526, 0.1958, 0.1975, 0.1367, 0.1879, 0.1295],\n",
+      "        [0.1385, 0.2184, 0.2128, 0.1420, 0.0988, 0.1896]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(attn_scores, dim=-1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "584e8d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4421, 0.5931, 0.5790],\n",
+      "        [0.4419, 0.6515, 0.5683],\n",
+      "        [0.4431, 0.6496, 0.5671],\n",
+      "        [0.4304, 0.6298, 0.5510],\n",
+      "        [0.4671, 0.5910, 0.5266],\n",
+      "        [0.4177, 0.6503, 0.5645]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_context_vecs = attn_weights @ inputs\n",
+    "print(all_context_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ca590da7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous 2nd context vector: tensor([0.4419, 0.6515, 0.5683])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Previous 2nd context vector:\", context_vec_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "43c2bb8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.5500, 0.8700, 0.6600]), 3, 2)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_2 = inputs[1]\n",
+    "d_in = inputs.shape[1]\n",
+    "d_out = 2\n",
+    "x_2, d_in, d_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "dfb2387c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_key   = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8d35992e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.4306, 1.4551]), tensor([0.4433, 1.1419]), tensor([0.3951, 1.0037]))"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_2 = x_2 @ W_query\n",
+    "key_2   = x_2 @ W_key\n",
+    "value_2 = x_2 @ W_value\n",
+    "query_2, key_2, value_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c3f8c88b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keys.shape: torch.Size([6, 2])\n",
+      "values.shape: torch.Size([6, 2])\n",
+      "tensor([[0.3669, 0.7646],\n",
+      "        [0.4433, 1.1419],\n",
+      "        [0.4361, 1.1156],\n",
+      "        [0.2408, 0.6706],\n",
+      "        [0.1827, 0.3292],\n",
+      "        [0.3275, 0.9642]]) tensor([0.4306, 1.4551])\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = inputs @ W_key\n",
+    "values = inputs @ W_value\n",
+    "print(\"keys.shape:\", keys.shape)\n",
+    "print(\"values.shape:\", values.shape)\n",
+    "print(keys, query_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e04bccc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.8524), tensor([0.4433, 1.1419]))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys_2 = keys[1]\n",
+    "attn_scores_22 = query_2.dot(keys_2)\n",
+    "attn_scores_22, keys_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "0f8dc03b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.2705, 1.8524, 1.8111, 1.0795, 0.5577, 1.5440])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores_2 = query_2 @ keys.T\n",
+    "print(attn_scores_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "440bf3d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.4306, 1.4551])\n",
+      "tensor([[0.3669, 0.4433, 0.4361, 0.2408, 0.1827, 0.3275],\n",
+      "        [0.7646, 1.1419, 1.1156, 0.6706, 0.3292, 0.9642]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_2)\n",
+    "print(keys.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "a95f0568",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.4306, 1.4551]) tensor([0.3669, 0.7646]) tensor(1.2705)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_2, keys.T[:, 0], query_2 @ keys.T[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9ebb0f18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_k = keys.shape[-1]\n",
+    "d_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "9f5f66fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1500, 0.2264, 0.2199, 0.1311, 0.0906, 0.1820])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attn_weights_2  = torch.softmax(attn_scores_2 / d_k ** 0.5, dim=-1)\n",
+    "attn_weights_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "767999c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1855, 0.8812],\n",
+       "        [0.3951, 1.0037],\n",
+       "        [0.3879, 0.9831],\n",
+       "        [0.2393, 0.5493],\n",
+       "        [0.1492, 0.3346],\n",
+       "        [0.3221, 0.7863]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "dcd6cfd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.3061, 0.8210])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_vec_2 = attn_weights_2 @ values\n",
+    "context_vec_2"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpt (3.14.0)",
+   "display_name": "gpt",
    "language": "python",
    "name": "python3"
   },
