--- a/attention.ipynb
+++ b/attention.ipynb
@@ -825,6 +825,14 @@
     "context_vec_2 = attn_weights_2 @ values\n",
     "context_vec_2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "015472e3",
+   "metadata": {},
+   "source": [
+    "# Next: 3.4.2 (page 92)"
+   ]
   }
  ],
  "metadata": {
