--- a/attention.ipynb
+++ b/attention.ipynb
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([2.3049e-26, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00])"
+       "tensor([1.1817e-20, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00])"
       ]
      },
      "execution_count": 14,
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "1170f969",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "632c0546",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "d1daa898",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "edfaceea",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "9f772995",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "83dab672",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "5a2311b8",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "584e8d65",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "ca590da7",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "43c2bb8a",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "(tensor([0.5500, 0.8700, 0.6600]), 3, 2)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "dfb2387c",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "8d35992e",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "(tensor([0.4306, 1.4551]), tensor([0.4433, 1.1419]), tensor([0.3951, 1.0037]))"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "c3f8c88b",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "e04bccc3",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "(tensor(1.8524), tensor([0.4433, 1.1419]))"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "id": "0f8dc03b",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "id": "440bf3d2",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "id": "a95f0568",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "id": "9ebb0f18",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
        "2"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "id": "9f5f66fe",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
        "tensor([0.1500, 0.2264, 0.2199, 0.1311, 0.0906, 0.1820])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 35,
    "id": "767999c1",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
        "        [0.3221, 0.7863]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "id": "dcd6cfd7",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        "tensor([0.3061, 0.8210])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,6 +832,454 @@
    "metadata": {},
    "source": [
     "# Next: 3.4.2 (page 92)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee9d9c03",
+   "metadata": {},
+   "source": [
+    "# Self-attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "edd84569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class SelfAttention_v1(nn.Module):\n",
+    "    def __init__(self, d_in, d_out):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.W_query = nn.Parameter(torch.rand(d_in, d_out))\n",
+    "        self.W_key   = nn.Parameter(torch.rand(d_in, d_out))\n",
+    "        self.W_value = nn.Parameter(torch.rand(d_in, d_out))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        keys    = x @ self.W_key\n",
+    "        queries = x @ self.W_query\n",
+    "\n",
+    "        attn_scores  = queries @ keys.T\n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "\n",
+    "        values      = x @ self.W_value\n",
+    "        context_vec = attn_weights @ values\n",
+    "\n",
+    "        return context_vec\n",
+    "\n",
+    "    def assign_params(self, q, k, v):\n",
+    "        self.W_query = nn.Parameter(q)\n",
+    "        self.W_key   = nn.Parameter(k)\n",
+    "        self.W_value = nn.Parameter(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bb79a70f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2996, 0.8053],\n",
+      "        [0.3061, 0.8210],\n",
+      "        [0.3058, 0.8203],\n",
+      "        [0.2948, 0.7939],\n",
+      "        [0.2927, 0.7891],\n",
+      "        [0.2990, 0.8040]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "sa_v1 = SelfAttention_v1(d_in, d_out)\n",
+    "print(sa_v1(inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ac9b4bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SelfAttention_v2(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        keys    = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "\n",
+    "        attn_scores  = queries @ keys.T\n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "\n",
+    "        values      = self.W_value(x)\n",
+    "        context_vec = attn_weights @ values\n",
+    "\n",
+    "        return context_vec\n",
+    "\n",
+    "    def weights(self):\n",
+    "        return self.W_query.weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0ccd7048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0739,  0.0713],\n",
+      "        [-0.0748,  0.0703],\n",
+      "        [-0.0749,  0.0702],\n",
+      "        [-0.0760,  0.0685],\n",
+      "        [-0.0763,  0.0679],\n",
+      "        [-0.0754,  0.0693]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(789)\n",
+    "sa_v2 = SelfAttention_v2(d_in, d_out)\n",
+    "print(sa_v2(inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a0e4cefd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q, k, v = list(sa_v2.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d3567bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Parameter containing:\n",
+       " tensor([[ 0.3161,  0.4568,  0.5118],\n",
+       "         [-0.1683, -0.3379, -0.0918]], requires_grad=True),\n",
+       " Parameter containing:\n",
+       " tensor([[ 0.4058, -0.4704,  0.2368],\n",
+       "         [ 0.2134, -0.2601, -0.5105]], requires_grad=True),\n",
+       " Parameter containing:\n",
+       " tensor([[ 0.2526, -0.1415, -0.1962],\n",
+       "         [ 0.5191, -0.0852, -0.2043]], requires_grad=True))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q, k, v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ff2a03b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa_v1.assign_params(q.T, k.T, v.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a3af1b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.0739,  0.0713],\n",
+       "         [-0.0748,  0.0703],\n",
+       "         [-0.0749,  0.0702],\n",
+       "         [-0.0760,  0.0685],\n",
+       "         [-0.0763,  0.0679],\n",
+       "         [-0.0754,  0.0693]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.0739,  0.0713],\n",
+       "         [-0.0748,  0.0703],\n",
+       "         [-0.0749,  0.0702],\n",
+       "         [-0.0760,  0.0685],\n",
+       "         [-0.0763,  0.0679],\n",
+       "         [-0.0754,  0.0693]], grad_fn=<MmBackward0>))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa_v1(inputs), sa_v2(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b2bbed0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.2899,  0.0716,  0.0760, -0.0138,  0.1344, -0.0511],\n",
+      "        [ 0.4656,  0.1723,  0.1751,  0.0259,  0.1771,  0.0085],\n",
+      "        [ 0.4594,  0.1703,  0.1731,  0.0259,  0.1745,  0.0090],\n",
+      "        [ 0.2642,  0.1024,  0.1036,  0.0186,  0.0973,  0.0122],\n",
+      "        [ 0.2183,  0.0874,  0.0882,  0.0177,  0.0786,  0.0144],\n",
+      "        [ 0.3408,  0.1270,  0.1290,  0.0198,  0.1290,  0.0078]],\n",
+      "       grad_fn=<MmBackward0>)\n",
+      "tensor([[0.1844, 0.1653, 0.1657, 0.1584, 0.1706, 0.1555],\n",
+      "        [0.1926, 0.1663, 0.1666, 0.1546, 0.1667, 0.1532],\n",
+      "        [0.1922, 0.1663, 0.1666, 0.1548, 0.1667, 0.1534],\n",
+      "        [0.1808, 0.1667, 0.1668, 0.1599, 0.1663, 0.1594],\n",
+      "        [0.1781, 0.1668, 0.1669, 0.1611, 0.1661, 0.1609],\n",
+      "        [0.1853, 0.1665, 0.1667, 0.1578, 0.1667, 0.1569]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = sa_v2.W_key(inputs)\n",
+    "queries = sa_v2.W_query(inputs)\n",
+    "attn_scores = queries @ keys.T\n",
+    "attn_weights = torch.softmax(attn_scores/keys.shape[-1], dim=-1)\n",
+    "print(attn_scores, attn_weights, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "416ad687",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([0.1844, 0.1653, 0.1657, 0.1584, 0.1706, 0.1555])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9b15898a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 0., 0., 0., 0.],\n",
+      "        [1., 1., 0., 0., 0., 0.],\n",
+      "        [1., 1., 1., 0., 0., 0.],\n",
+      "        [1., 1., 1., 1., 0., 0.],\n",
+      "        [1., 1., 1., 1., 1., 0.],\n",
+      "        [1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = attn_scores.shape[0]\n",
+    "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+    "print(mask_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8ac1f073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1844, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1926, 0.1663, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1922, 0.1663, 0.1666, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1808, 0.1667, 0.1668, 0.1599, 0.0000, 0.0000],\n",
+      "        [0.1781, 0.1668, 0.1669, 0.1611, 0.1661, 0.0000],\n",
+      "        [0.1853, 0.1665, 0.1667, 0.1578, 0.1667, 0.1569]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "masked_simple = attn_weights * mask_simple\n",
+    "print(masked_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "775b7da2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5366, 0.4634, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3660, 0.3168, 0.3172, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2681, 0.2473, 0.2474, 0.2371, 0.0000, 0.0000],\n",
+      "        [0.2123, 0.1988, 0.1989, 0.1920, 0.1980, 0.0000],\n",
+      "        [0.1853, 0.1665, 0.1667, 0.1578, 0.1667, 0.1569]],\n",
+      "       grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_sums = masked_simple.sum(dim=-1, keepdim=True)\n",
+    "masked_simple_norm = masked_simple / row_sums\n",
+    "print(masked_simple_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3a8fd36b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[False,  True,  True,  True,  True,  True],\n",
+       "         [False, False,  True,  True,  True,  True],\n",
+       "         [False, False, False,  True,  True,  True],\n",
+       "         [False, False, False, False,  True,  True],\n",
+       "         [False, False, False, False, False,  True],\n",
+       "         [False, False, False, False, False, False]]),\n",
+       " tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
+       "         [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
+       "         [0.4594, 0.1703, 0.1731,   -inf,   -inf,   -inf],\n",
+       "         [0.2642, 0.1024, 0.1036, 0.0186,   -inf,   -inf],\n",
+       "         [0.2183, 0.0874, 0.0882, 0.0177, 0.0786,   -inf],\n",
+       "         [0.3408, 0.1270, 0.1290, 0.0198, 0.1290, 0.0078]],\n",
+       "        grad_fn=<MaskedFillBackward0>))"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "mask.bool(), masked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1df003a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "d8bdf933",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 2., 0., 2., 2., 0.],\n",
+      "        [0., 0., 0., 2., 0., 2.],\n",
+      "        [2., 2., 2., 2., 0., 2.],\n",
+      "        [0., 2., 2., 0., 0., 2.],\n",
+      "        [0., 2., 0., 2., 0., 2.],\n",
+      "        [0., 2., 2., 2., 2., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "dropout = torch.nn.Dropout(0.5)\n",
+    "example = torch.ones(6, 6)\n",
+    "print(dropout(example))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "45b58ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.7599, 0.6194, 0.6206, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.4921, 0.4925, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3966, 0.0000, 0.3775, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3327, 0.3331, 0.3084, 0.3331, 0.0000]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "print(dropout(attn_weights))"
    ]
   }
  ],
