--- a/attention.ipynb
+++ b/attention.ipynb
@@ -1281,6 +1281,188 @@
     "torch.manual_seed(123)\n",
     "print(dropout(attn_weights))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "610f2047",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 6, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "print(batch.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "fbe7dad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CausalAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.d_out = d_out\n",
+    "\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer('mask', torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "\n",
+    "        keys    = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values  = self.W_value(x)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(1, 2)\n",
+    "        attn_scores.masked_fill_(\n",
+    "            self.mask.bool()[:num_tokens, :num_tokens], -torch.inf\n",
+    "        )\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1]**0.5, dim=-1\n",
+    "        )\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = attn_weights @ values\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "9c8cca69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 0., 1.],\n",
+       "        [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "9727aaf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False,  True,  True,  True,  True,  True],\n",
+       "        [False, False,  True,  True,  True,  True],\n",
+       "        [False, False, False,  True,  True,  True],\n",
+       "        [False, False, False, False,  True,  True],\n",
+       "        [False, False, False, False, False,  True],\n",
+       "        [False, False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask.bool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "700e9466",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False,  True,  True,  True,  True,  True],\n",
+       "        [False, False,  True,  True,  True,  True],\n",
+       "        [False, False, False,  True,  True,  True],\n",
+       "        [False, False, False, False,  True,  True],\n",
+       "        [False, False, False, False, False,  True],\n",
+       "        [False, False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_tokens = 6\n",
+    "mask.bool()[:num_tokens, :num_tokens]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "7c26c774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context_vecs.shape: torch.Size([2, 6, 2])\n",
+      "tensor([[[-0.4519,  0.2216],\n",
+      "         [-0.5874,  0.0058],\n",
+      "         [-0.6300, -0.0632],\n",
+      "         [-0.5675, -0.0843],\n",
+      "         [-0.5526, -0.0981],\n",
+      "         [-0.5299, -0.1081]],\n",
+      "\n",
+      "        [[-0.4519,  0.2216],\n",
+      "         [-0.5874,  0.0058],\n",
+      "         [-0.6300, -0.0632],\n",
+      "         [-0.5675, -0.0843],\n",
+      "         [-0.5526, -0.0981],\n",
+      "         [-0.5299, -0.1081]]], grad_fn=<UnsafeViewBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1]\n",
+    "ca = CausalAttention(d_in, d_out, context_length, 0.0)\n",
+    "context_vecs = ca(batch)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)\n",
+    "print(context_vecs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68df608d",
+   "metadata": {},
+   "source": [
+    "# Next: 3.6"
+   ]
   }
  ],
  "metadata": {
