--- a/attention.ipynb
+++ b/attention.ipynb
@@ -130,7 +130,7 @@
       "text/plain": [
        "(tensor([[ 1.3966e+00, -9.9491e-01, -1.5822e-03],\n",
        "         [-1.1659e+00,  1.3834e-01, -9.8013e-01],\n",
-       "         [ 1.0122e+00, -6.5152e-01,  8.6052e-02],\n",
+       "         [ 1.0122e+00, -6.5152e-01,  8.6051e-02],\n",
        "         [ 2.5264e-01,  2.1043e+00, -6.4511e-01],\n",
        "         [-3.1843e-01, -1.2264e-01, -3.9307e-02],\n",
        "         [-3.1300e-01,  7.5582e-01, -1.2656e+00]], grad_fn=<EmbeddingBackward0>),\n",
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1.1817e-20, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00])"
+       "tensor([0., 0., 0., 0., 0., 0.])"
       ]
      },
      "execution_count": 14,
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "9b15898a",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "8ac1f073",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "id": "775b7da2",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "id": "3a8fd36b",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1195,7 @@
        "        grad_fn=<MaskedFillBackward0>))"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "id": "1df003a6",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "id": "d8bdf933",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "id": "45b58ca5",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 54,
    "id": "610f2047",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 55,
    "id": "fbe7dad4",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 56,
    "id": "9c8cca69",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1357,7 @@
        "        [0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 57,
    "id": "9727aaf2",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1384,7 @@
        "        [False, False, False, False, False, False]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 58,
    "id": "700e9466",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1410,7 @@
        "        [False, False, False, False, False, False]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 59,
    "id": "7c26c774",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpt",
+   "display_name": "gpt (3.14.0)",
    "language": "python",
    "name": "python3"
   },
