--- a/attention.ipynb
+++ b/attention.ipynb
@@ -1463,6 +1463,74 @@
    "source": [
     "# Next: 3.6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "83f0df95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttentionWrapper(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList(\n",
+    "            [\n",
+    "                CausalAttention(d_in, d_out, context_length, dropout, qkv_bias=qkv_bias)\n",
+    "                for _ in range(num_heads)\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.cat([head(x) for head in self.heads], dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "758d2f7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-0.4519,  0.2216,  0.4772,  0.1063],\n",
+      "         [-0.5874,  0.0058,  0.5891,  0.3257],\n",
+      "         [-0.6300, -0.0632,  0.6202,  0.3860],\n",
+      "         [-0.5675, -0.0843,  0.5478,  0.3589],\n",
+      "         [-0.5526, -0.0981,  0.5321,  0.3428],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]],\n",
+      "\n",
+      "        [[-0.4519,  0.2216,  0.4772,  0.1063],\n",
+      "         [-0.5874,  0.0058,  0.5891,  0.3257],\n",
+      "         [-0.6300, -0.0632,  0.6202,  0.3860],\n",
+      "         [-0.5675, -0.0843,  0.5478,  0.3589],\n",
+      "         [-0.5526, -0.0981,  0.5321,  0.3428],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]]], grad_fn=<CatBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1] # This is the number of tokens\n",
+    "d_in, d_out = 3, 2\n",
+    "mha = MultiHeadAttentionWrapper(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "context_vecs = mha(batch)\n",
+    "\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac76744c",
+   "metadata": {},
+   "source": [
+    "# Next: 3.6.2\n",
+    "Improving the implementation by processing the heads in parallel, by computing the outputs for all the attention heads simultaneously via matrix multiplication."
+   ]
   }
  ],
  "metadata": {
