--- a/attention.ipynb
+++ b/attention.ipynb
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "id": "83f0df95",
    "metadata": {},
    "outputs": [],
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "id": "758d2f7f",
    "metadata": {},
    "outputs": [
@@ -1530,6 +1530,245 @@
    "source": [
     "# Next: 3.6.2\n",
     "Improving the implementation by processing the heads in parallel, by computing the outputs for all the attention heads simultaneously via matrix multiplication."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "04f068b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \"d_out must be divisible by num_heads\"\n",
+    "\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out // num_heads\n",
+    "\n",
+    "        self.W_query  = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key    = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value  = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)\n",
+    "        self.dropout  = nn.Dropout(dropout)\n",
+    "\n",
+    "        self.register_buffer(\"mask\", torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "\n",
+    "        keys: torch.Tensor    = self.W_key(x)\n",
+    "        queries: torch.Tensor = self.W_query(x)\n",
+    "        values: torch.Tensor  = self.W_value(x)\n",
+    "\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # b, num_tokens, num_heads, head_dim -> b, num_heads, num_tokens, head_dim\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "\n",
+    "        # 0, 1,         2,          3\n",
+    "        # b, num_heads, num_tokens, head_dim\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)\n",
+    "\n",
+    "        # After matul:\n",
+    "        # b, num_heads, num_tokens, num_tokens\n",
+    "\n",
+    "        # Apply causal mask\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens] # type: ignore\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "\n",
+    "        # Softmax, logits -> prob\n",
+    "        attn_weights: torch.Tensor = torch.softmax(attn_scores / keys.shape[-1] ** 0.5, dim=-1)\n",
+    "\n",
+    "        # Apply dropout\n",
+    "        attn_weights: torch.Tensor = self.dropout(attn_weights)\n",
+    "\n",
+    "        # b, num_heads, num_tokens, num_tokens @ b, num_heads, num_tokens, head_dim ->\n",
+    "        # b, num_heads, num_tokens, head_dim\n",
+    "        context_vec = attn_weights @ values\n",
+    "        # print(\"context_vec.shape:\", context_vec.shape)\n",
+    "        # print(\"context_vec:\", context_vec)\n",
+    "\n",
+    "        # 0, 1,         2,          3\n",
+    "        # b, num_heads, num_tokens, head_dim -> b, num_tokens, num_heads, head_dim\n",
+    "        context_vec = context_vec.transpose(1, 2)\n",
+    "\n",
+    "        # b, num_tokens, num_heads, head_dim -> b, num_tokens, d_out\n",
+    "        context_vec = context_vec.contiguous().view(b, num_tokens, self.d_out)\n",
+    "\n",
+    "        context_vec: torch.Tensor = self.out_proj(context_vec)\n",
+    "\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59774e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a.shape: torch.Size([1, 2, 3, 4])\n",
+      "tensor([[[[1.3208, 1.1631, 1.2879],\n",
+      "          [1.1631, 2.2150, 1.8424],\n",
+      "          [1.2879, 1.8424, 2.0402]],\n",
+      "\n",
+      "         [[0.4391, 0.7003, 0.5903],\n",
+      "          [0.7003, 1.3737, 1.0620],\n",
+      "          [0.5903, 1.0620, 0.9912]]]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.1631)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor(\n",
+    "    [\n",
+    "        [\n",
+    "            [\n",
+    "                [0.2745, 0.6584, 0.2775, 0.8573],\n",
+    "                [0.8993, 0.0390, 0.9268, 0.7388],\n",
+    "                [0.7179, 0.7058, 0.9156, 0.4340],\n",
+    "            ],\n",
+    "            [\n",
+    "                [0.0772, 0.3565, 0.1479, 0.5331],\n",
+    "                [0.4066, 0.2318, 0.4545, 0.9737],\n",
+    "                [0.4606, 0.5159, 0.4220, 0.5786],\n",
+    "            ],\n",
+    "        ]\n",
+    "    ]\n",
+    ")\n",
+    "print(\"a.shape:\", a.shape)\n",
+    "print(a @ a.transpose(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2358bc3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First head:\n",
+      " tensor([[1.3208, 1.1631, 1.2879],\n",
+      "        [1.1631, 2.2150, 1.8424],\n",
+      "        [1.2879, 1.8424, 2.0402]])\n",
+      "\n",
+      "Second head:\n",
+      " tensor([[0.4391, 0.7003, 0.5903],\n",
+      "        [0.7003, 1.3737, 1.0620],\n",
+      "        [0.5903, 1.0620, 0.9912]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_head = a[0, 0, :, :]\n",
+    "first_res = first_head @ first_head.T\n",
+    "print(\"First head:\\n\", first_res)\n",
+    "\n",
+    "second_head = a[0, 1, :, :]\n",
+    "second_res = second_head @ second_head.T\n",
+    "print(\"\\nSecond head:\\n\", second_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "52197400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]],\n",
+      "\n",
+      "        [[0.3190, 0.4858],\n",
+      "         [0.2943, 0.3897],\n",
+      "         [0.2856, 0.3593],\n",
+      "         [0.2693, 0.3873],\n",
+      "         [0.2639, 0.3928],\n",
+      "         [0.2575, 0.4028]]], grad_fn=<ViewBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "batch_size, context_length, d_in = batch.shape\n",
+    "d_out = 2\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "context_vecs = mha(batch)\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "479d53aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.0609,  0.1996, -0.1692,  ..., -0.0019, -0.0838,  0.2607],\n",
+      "         [ 0.1341,  0.2619, -0.0928,  ...,  0.0266, -0.0920,  0.1994],\n",
+      "         [ 0.1586,  0.2787, -0.0634,  ...,  0.0383, -0.0952,  0.1743],\n",
+      "         [ 0.1421,  0.2541, -0.0574,  ...,  0.0361, -0.0754,  0.1557],\n",
+      "         [ 0.1510,  0.2136,  0.0057,  ...,  0.0623, -0.0952,  0.0924],\n",
+      "         [ 0.1369,  0.2248, -0.0252,  ...,  0.0460, -0.0754,  0.1197]],\n",
+      "\n",
+      "        [[ 0.0609,  0.1996, -0.1692,  ..., -0.0019, -0.0838,  0.2607],\n",
+      "         [ 0.1341,  0.2619, -0.0928,  ...,  0.0266, -0.0920,  0.1994],\n",
+      "         [ 0.1586,  0.2787, -0.0634,  ...,  0.0383, -0.0952,  0.1743],\n",
+      "         [ 0.1421,  0.2541, -0.0574,  ...,  0.0361, -0.0754,  0.1557],\n",
+      "         [ 0.1510,  0.2136,  0.0057,  ...,  0.0623, -0.0952,  0.0924],\n",
+      "         [ 0.1369,  0.2248, -0.0252,  ...,  0.0460, -0.0754,  0.1197]]],\n",
+      "       grad_fn=<ViewBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size, context_length, d_in = batch.shape\n",
+    "\n",
+    "# GPT-2 params\n",
+    "d_out = 768\n",
+    "context_length = 1024\n",
+    "num_heads = 12\n",
+    "\n",
+    "gpt2_mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads)\n",
+    "context_vecs = gpt2_mha(batch)\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
    ]
   }
  ],
